add some functions